...
      <SafeAreaProvider>
        <View
          style={[
            styles.loadingContainer,
            { backgroundColor: colors.background },
          ]}
          testID="app-loading"
        >
          <SystemBars style={isDark ? 'light' : 'dark'} />
          <LoadingDots size={10} />
        </View>
      </SafeAreaProvider>
    </GestureHandlerRootView>
...
